# calctl

./: . dockerignore  .coverage  .gitignore  404.html  Dockerfile  LICENSE  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  test_workflow.sh
.github/workflows/: main.yml  pr.yml  release.yml
docs/: index.md
reports/: bandit.html  bandit.json  coverage.xml  index.txt
reports/mypy/: index.html
reports/mypy/html/src/calctl/: __init__.py.html  __main__.py.html  cli.py.html  color.py.html  config.py.html  conflict.py.html  errors.py.html  models.py.html  service.py.html  store.py.html
search/: search_index.json
src/calctl/: __init__.py  cli.py  color.py  config.py  conflict.py  errors.py  models.py  service.py  store.py
src/calctl.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: __init__.py  test_color.py  test_conflict.py  test_errors.py  test_models.py  test_smoke.py  test_store.py
tests/bats/: setup_suite.bash  teardown_suite.bash  test_add.bats  test_agenda.bats  test_conflicts.bats  test_delete.bats  test_edit.bats  test_error_codes.bats  test_list.bats  test_search.bats  test_show.bats
tests/e2e/: __init__.py  conftest.py  test_e2e_scenarios.py
tests/integration/: __init__.py  conftest.py  test_cli_integration.py  test_full_workflow.py  test_store_service_integration.py
tests/unit/: __init__.py  test_cli.py  test_service.py
