[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "calctl"
version = "0.1.0"
description = "A command-line calendar manager"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
calctl = "calctl.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"